# zakharov

./: .gitmodules  AUTHORS  ChangeLog  ChangeLog.0  Makefile.am  NEWS  README  TODO  configure.ac  configure.cmd  makelinks.sh.in
config/sites/: f14_ia32_ifort+mpif90+skin_optim_jazz2  f14_ia32_ifort_optim_jazz2  f16_x86_64_g++_optim_jazz2  f16_x86_64_ifort_optim_jazz2  f19_x86_64_ifort_debug_jazz3  f19_x86_64_ifort_optim_jazz3  f23_x86_64_ifort_optim_jazz3  f26_x86_64_clang_optim_jazz4  f30_x86_64_g++_optim_jazz4  f31_x86_64_g++_optim_jazz3  f31_x86_64_g++_optim_jazz4  f32_x86_64_g++_optim_jazz5  rh5.9_x86_64_ifort_optim_phalanx
doc/: Makefile.am  OUsimu.m  Robinson92.m  biOUeigen.m  biOUmean.m  biOUsdev.m  biOUsimu.m  biOUvar.m  damping.m  damping.tex  fig48.m  getcoefs.m  linwaves.m  linwaves.tex  numeric_sde.m  numeric_sde.tex  ode1.m  startup.m  zakharov_sources.tex
doc/doxygen/: Doxyfile.in
doc/payne_et_al_1983/: Makefile.am  fig1.m  fig10.m  fig11.m  fig12.m  fig2.m  fig3.m  fig4.m  fig5.m  fig7.m  fig8.m  fig9.m  payne_1983.tex  startup.m  table1.m  table2.m  table3.m  table4.m  test_epsilons.m  testall.m
doc/payne_et_al_1989/: Makefile.am  fig2.m  fig3.m  startup.m
doc/shen_nicholson_1987/: Ek2.m  Makefile.am  dEk2dp.m  fig10.m  fig12.m  fig13.m  fig2.m  fig4.m  fig5.m  fig6.m  fig8.m  fig9.m  growth_rate_nse.m  growth_rate_zak.m  leasqr.m  shen_1987.tex  testall.m
lib/: Makefile.am
matlab/: A.m  B.m  C.m  CGSconstants.m  CN2.c  FFT.m  IFFT.m  Makefile.am  SIconstants.m  analytic_inf_one_soliton.m  analytic_one_soliton.m  beam.m  beam_param_init.m  checkeigen.m  checkw.m  cmpis_isi.m  cmplw.m  collisions.m  derivate.m  diffusion_init.m  diffusion_update.m  disproot.m  efluct0_1.m  efluct1.m  efluct10.m  efluct_grade_init.m  efluct_init.m  egauss.m  egauss_init.m  ekbeam.m  initial.m  integrate.m  inv_elliptke.m  is4096.m  linearwaves.m  linearwaves1.m  linearwaves2.m  linwaves4096.m  maxwell.m  maxwell_param_init.m  (+61 more)
share/: A.conf  B.conf  C.conf  Makefile.am  beam.conf  diffusion1_4096.conf  efluct0_1.conf  efluct0_5.conf  efluct1.conf  efluct10.conf  egauss1200.conf  egauss2400.conf  egauss600.conf  egs2001.conf  ekbeam.conf  grl_eduard.conf  hanssen1992IIfig14-17.conf  hanssen1992IIfig20b.conf  hanssen1992Ifig10-13.conf  hanssen1992Ifig2-5.conf  hanssen1992Ifig20a.conf  hanssen1992Ifig6-9.conf  is4096.conf  is4096i.conf  linwaves4096.conf  linwaves4096_2.conf  maxwell1024.conf  maxwell1_4096.conf  maxwell2_4096.conf  maxwell4096.conf  maxwell64.conf  payne1984.conf  payne_et_al_1983_fig11_12_1000iter.conf  payne_et_al_1983_fig11_12_2000iter.conf  payne_et_al_1989_fig2_1200.conf  payne_et_al_1989_fig2_2400.conf  payne_et_al_1989_fig2_600.conf  payne_et_al_1989_fig3.conf  payne_et_al_1989_fig4.conf  payne_et_al_1989_fig5.conf  (+4 more)
src/: Makefile.am  SIconsts.cpp  SIconsts.h  default-mode.cpp  default-mode.h  density-fluct.cpp  density-fluct.h  density-parab.cpp  density-parab.h  diagnostics.cpp  diagnostics.h  efluct.cpp  efluct.h  egauss.cpp  egauss.h  mapper.cpp  mapper.h  modes-factory.h  range-spec.h  solitons.cpp  solitons.h  spectra.cpp  spectra.h  thermal-fluct.cpp  thermal-fluct.h  time-integrate-classic.cpp  time-integrate-fixed-E.cpp  time-integrate-fixed-n.cpp  time-integrate-linear.cpp  time-integrate-noFp.cpp  time-integrate-pump.cpp  wofz.cpp  zakharov-defs.h  zakharov.cpp  zakharov.h
tests/: Fftw.cpp  Makefile.am  Run.sh  SliceVsIndirect.cpp  Zakharov.cpp  egauss.sh  linwaves.sh  linwaves2.sh  linzak.sh  runE0.sh  runErms.sh  runL.sh  runk0.sh
