

matlabdir = $(prefix)/matlab

matlab_DATA = A.m analytic_inf_one_soliton.m analytic_one_soliton.m beam.m \
beam_param_init.m B.m CGSconstants.m C.m CN2.c collisions.m derivate.m \
diffusion_init.m diffusion_update.m efluct0_1.m efluct10.m efluct1.m \
efluct_grade_init.m efluct_init.m egauss_init.m egauss.m ekbeam.m FFT.m \
IFFT.m integrate.m inv_elliptke.m maxwell.m maxwell_param_init.m \
movie_zakharov.m plot_all_zakharov.m plotekbeam.m plotisE.m plotis.m \
plotisn.m plot_zakharov.m SIconstants.m soliton_init.m \
test_cerenkov_diffusion.m tfaddpath.m tfanalysis.m tfluct_init.m \
thermal_fluctuations_init.m tst.m view_zakharov.m zakharov_analytic_inf.m \
zakharov_analytic.m zakharov_epsilon.m zakharov_epsilons.m zakharov_inf.m \
zakharov_init_inf.m zakharov_init.m zakharov.m zakharov_NPH.m \
zakharov_NPHs.m zakharov_par_parsing.m zakharov_sources.m \
zakharov_time_integrate.m


sddir = $(prefix)/matlab/@sd

sd_DATA = @sd/ChangeLog.0 @sd/ChangeLog @sd/TODO \
@sd/abs.m @sd/contour.m @sd/contourf.m @sd/ctranspose.m @sd/curl.m @sd/display.m \
@sd/fft.m @sd/fft2.m @sd/get.m @sd/gradient.m @sd/ifft.m @sd/imag.m @sd/imagesc.m \
@sd/log.m @sd/log10.m @sd/loglog.m @sd/max.m @sd/mean.m @sd/min.m @sd/minus.m \
@sd/permute.m @sd/plot.m @sd/plot3.m @sd/plus.m @sd/power.m @sd/quiver.m \
@sd/rdivide.m @sd/real.m @sd/sd.m @sd/semilogx.m @sd/semilogy.m @sd/set.m \
@sd/slice.m @sd/sqrt.m @sd/squeeze.m @sd/std.m @sd/subvolume.m @sd/sum.m @sd/times.m \
@sd/transpose.m @sd/uminus.m @sd/private/dim2str.m  @sd/private/maketitle.m

EXTRA_DIST = $(matlab_DATA) $(sd_DATA)
