

pkgdata_DATA = A.conf B.conf beam.conf C.conf CVS efluct0_1.conf \
efluct0_5.conf efluct10.conf efluct1.conf egauss1200.conf egauss2400.conf \
egauss600.conf egs2001.conf ekbeam.conf maxwell4096.conf \
payne_et_al_1983_fig11_12_1000iter.conf \
payne_et_al_1983_fig11_12_2000iter.conf payne_et_al_1989_fig2_1200.conf \
payne_et_al_1989_fig2_2400.conf payne_et_al_1989_fig2_600.conf \
payne_et_al_1989_fig3.conf payne_et_al_1989_fig4.conf \
payne_et_al_1989_fig5.conf shen_nicholson_1987_fig12.conf \
shen_nicholson_1987_fig4.conf shen_nicholson_1987_fig8.conf *.conf

EXTRA_DIST = $(pkgdata_DATA)

