
cpptoolsdir = $(prefix)/src/c++-tools 

cpptools_DATA = \
c++-tools/ChangeLog c++-tools/ChangeLog.0 \
c++-tools/any.h \
c++-tools/bench.h \
c++-tools/classexception.h \
c++-tools/fourier.h \
c++-tools/fourier-dxml.h \
c++-tools/fourier-fftw3.h \
c++-tools/fourier-fftw.h \
c++-tools/fourier-mlib.h \
c++-tools/hdf-interface.cpp c++-tools/hdf-interface.h \
c++-tools/hdf4-interface.cpp c++-tools/hdf4-interface.h \
c++-tools/hdf5-interface.cpp c++-tools/hdf5-interface.h \
c++-tools/hdf-interface.h \
c++-tools/parser.cpp c++-tools/parser.h \
c++-tools/gnuplot-interface.cpp c++-tools/gnuplot-interface.h \
c++-tools/time-utils.h


EXTRA_DIST = \
default-mode.cpp default-mode.h \
diagnostics.cpp diagnostics.h \
density-fluct.cpp density-fluct.h \
density-parab.cpp density-parab.h \
efluct.cpp efluct.h \
egauss.cpp egauss.h \
mapper.cpp mapper.h \
modes-factory.h \
SIconsts.cpp SIconsts.h \
solitons.cpp solitons.h \
spectra.cpp spectra.h \
thermal-fluct.cpp thermal-fluct.h \
zakharov.cpp zakharov.h \
time-integrate-classic.cpp \
time-integrate-pump.cpp \
time-integrate-fixed-n.cpp \
time-integrate-fixed-E.cpp \
time-integrate-linear.cpp \
time-integrate-noFp.cpp \
range-spec.h \
zakharov-defs.h \
$(cpptools_DATA)

